--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "formidable": "^3.5.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "prisma": "^5.21.1",
     "react": "^18",
