--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "formidable": "^3.5.2",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "prisma": "^5.21.1",
@@ -20,6 +21,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
